--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -6,5 +6,17 @@
 .headLogo{
     
     width: 25%;
+   
+   
+}
+#eventIcon{
+    margin-left: -24px; 
+}
+
+.eventIcon {
+    margin-left: -20px;
+}
+.myEventsBtn{
+    text-align: center;
 }
 
