--- a/client/src/components/Budget/style.css
+++ b/client/src/components/Budget/style.css
@@ -11,6 +11,9 @@
     background-color: white;
     border: 1px solid #4CAF50;
     border-radius: 5px;
-    padding: 5px;
+    padding: 6px;
+    width: 100px;
     margin: 10px;
+    
+    
 }
