added bowtie to bottom of homepage

--- a/client/src/components/Time line/style.css
+++ b/client/src/components/Time line/style.css
@@ -1,4 +1,7 @@
-.timelineContainer{
-    /* height: 750px; */
-}
+/* .timelineContainer{
+    height: 750px;
+} */
 
+/* .bowtie{
+    background-color: #9bcdce;
+} */
